--- a/app/src/main/res/layout/activity_lock.xml
+++ b/app/src/main/res/layout/activity_lock.xml
@@ -72,6 +72,9 @@
 
         />
 
+    
+
+    
     <Button
         android:id="@+id/btnStopService"
         android:layout_width="match_parent"
@@ -82,6 +85,22 @@
         android:drawableLeft="@drawable/proximity"
 
         />
+
+
+    <Switch
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Permit this app to lock the device"
+        android:id="@+id/switch1"
+        android:layout_gravity="center_horizontal" />
+
+    <Switch
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Double tap Proximity Sensor for Screen On"
+        android:id="@+id/switch1"
+        android:layout_gravity="center_horizontal" />
+
 
 
 </LinearLayout>
